# etl-pandas-docker

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: extract.py  load.py  transform.py
